--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -44,15 +44,6 @@ img.logo {
 
   //*About Section*/
 
-	.social-media {
-		margin:3.6em 0;
-		.fab {
-			font-size:2.4rem;
-			color:$color_link;
-			padding:0 2.4rem 0 0;
-		}
-	}
-
 		/*Grid poprfolio layout*/
 	.grid {
 		display: grid;
@@ -105,10 +96,10 @@ img.logo {
 			padding: .8rem 0 0;
 		}
 		 img {
-			height: auto;
+			height: 100%;
 			width: 100%;
 			margin:0;
-			box-shadow: $color_light_grey 0 0 32px;
+			box-shadow: $color_shadow 0 0 32px;
 			&:hover {
 				opacity:100%;
 				@include ease;
@@ -209,19 +200,38 @@ img.logo {
 		}
 	}
 }
+	#results {
+		position:relative;
+	}
+
 .pager {
 	display: flex;
     width: 100%;
     margin: 56px auto 0;
     align-items: center;
 	justify-content: space-between;
-	p {
-		padding:16px 0;
-		font-weight:600;
+	.next {
+		position:absolute;
+		right:0;
+		top:30%;
 	}
-	i {
-		color: $color_link;
+	.prev {
+		position:absolute;
+		left:0;
+		top:30%;
 	}
+	a {
+		padding:.5rem 1rem;
+		font-size:1.5rem;
+		background-color: #efefef;
+		color: #c2c2c2;
+		&:hover {
+			background-color:#D7ECFC;
+			@include ease;
+			color: #0890F2;
+		}
+	}
+
 }
 
 #about {
